# war_card_game

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/scripts/: sign.sh
.github/workflows/: build.yml  pull.yml  rust.yml
src/: app.rs  args.rs  card.rs  color.rs  draw.rs  game.rs  main.rs  player.rs  player_move.rs  rank.rs  seed.rs  unicode.rs
