[package]
name = "war_card_game"
version = "0.3.1"
edition = "2021"
authors = ["Bartosz Cieśla <bartosz.ciesla@gmail.com>"]
license = "MIT"
description = "War (card game) simulation"
homepage = "https://github.com/BartoszCiesla/war_card_game"
repository = "https://github.com/BartoszCiesla/war_card_game"
readme = "README.md"
keywords = ["game", "simulation", "cards", "war", "deck"]
categories = ["games", "simulation"]

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
enum-iterator = "2.1.0"
itertools = "0.13.0"
rand = "0.8.5"

[profile.release]
strip = true
opt-level = "z"
lto = true
