[package]
name = "war_card_game"
version = "0.3.6"
edition = "2021"
authors = ["Bartosz Cieśla <bartosz.ciesla@gmail.com>"]
license = "MIT"
description = "War (card game) simulation"
homepage = "https://github.com/BartoszCiesla/war_card_game"
repository = "https://github.com/BartoszCiesla/war_card_game"
readme = "README.md"
keywords = ["game", "simulation", "cards", "war", "deck"]
categories = ["games", "simulation"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
enum-iterator = "2.1.0"
itertools = "0.14.0"
rand = "0.9.0"

[profile.release]
strip = true
opt-level = "z"
lto = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWRAdDA6DASFAGd5opsHrzD1Kbwe8hI2d+H6izbqAADQI7JluTlNOPIv"
